# mb-challenge

./: .editorconfig  .env  .env.example  .env.local  .gitignore  .mockend.json  .python-version  Dockerfile  Dockerfile.api  Dockerfile.fakeapi  Makefile  README.md  db.json  docker-compose.yaml  index.js  package-lock.json  package.json  pyproject.toml  routes.json
api/: run.py
api/application/protocols/: get_mms_repository.py
api/application/use_cases/: db_get_mms.py
api/config/: settings.py
api/domain/protocols/: base_response.py  mms_response.py
api/domain/use_cases/: get_mms.py
api/infrastructure/database/mongodb/: mms_implementation.py
api/main/factories/application/: db_get_mms_factory.py
api/main/factories/controllers/: get_mms_controller_factory.py
api/presentation/controllers/: base_controller.py  get_mms_controller.py
api/presentation/errors/: exceptions.py
api/presentation/helpers/: http.py
api/presentation/protocols/: request.py  response.py
app/: __init__.py  check_service.py  check_unprocessed_days.py  ingestion.py  retry.py
app/config/: settings.py
app/constants/: const.py
app/database/: loader.py
app/ingestion_data/: ingestion.py
app/jobs_definitions/mercado-bitcoin/: source.json
app/shared/: arg_parser.py  async_request.py  execution_info.py  file_manager.py  formatter.py  job.py  jobs_loader.py  jobs_manager.py  output_formatter.py  process_data.py  request.py  system_configure.py  system_exiter.py  writer.py
tests/api/application/: test_db_get_mms.py
tests/api/presentation/controllers/: test_get_mms_controller.py
(+1 files in other folders)
