[tool.poetry]
name = "mb-challenge"
version = "0.1.0"
description = "challenge for Mercado Bitcoin"
authors = ["Elisson Silva <nossilesilva@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
python-decouple = "^3.6"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
