[tool.poetry]
name = "mb-challenge"
version = "0.1.0"
description = "challenge for Mercado Bitcoin"
authors = ["Elisson Silva <nossilesilva@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-decouple = "^3.6"
pandas = "^1.4"
pandas-ta = "^0.3.14-beta.0"
pymongo = "^4.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
